Fixed overflow issues on landscape mobile view

--- a/css/frontend.css
+++ b/css/frontend.css
@@ -907,6 +907,10 @@ form .btn-group button#submit {
 .nav-menu.is-active {
   left: 0;
 }
+.nav-menu .nav-wrapper {
+  overflow: auto;
+  height: 100vh;
+}
 @media (min-width: 1024px) {
   .nav-menu {
     position: relative;
@@ -914,7 +918,7 @@ form .btn-group button#submit {
   }
 }
 .nav-menu .icon {
-  padding: 1rem;
+  padding: 0 1rem;
 }
 .nav-menu .icon a {
   display: block;
@@ -922,15 +926,24 @@ form .btn-group button#submit {
   height: 128px;
   margin: auto;
 }
-.nav-menu ul {
+@media (min-width: 360px) and (max-width: 768px) {
+  .nav-menu .icon a {
+    width: 64px;
+    height: 64px;
+  }
+}
+.nav-menu nav {
+  overflow-y: auto;
+}
+.nav-menu nav ul {
   padding: 0;
 }
-.nav-menu ul li {
+.nav-menu nav ul li {
   list-style: none;
   margin: 0;
   width: 100%;
 }
-.nav-menu ul li a {
+.nav-menu nav ul li a {
   width: 100%;
   margin: 0;
 }
