--- a/scss/components/_nav.scss
+++ b/scss/components/_nav.scss
@@ -28,6 +28,11 @@
         left: 0;
     }
 
+    .nav-wrapper {
+        overflow: auto;
+        height: 100vh;
+    }
+
     //  Store width of the menu bar
     $width-menu: 256px;
 
@@ -53,34 +58,42 @@
     }
 
     .icon {
-        padding: calc($base-spacing/2);
+        padding: 0 calc($base-spacing/2);
         a {
             display: block;
             width: 128px;
             height: 128px;
             margin: auto;
+            @include mq('sm') {
+                width: 64px;
+                height: 64px;
+            }
         }
+        
     }
-
     /* Main Nav Menu */
-    ul {
-        padding: 0;
-        li {
-            list-style: none;
-            margin: 0;
-            width: 100%;
-            a {
-                width: 100%;
+    nav{
+        overflow-y: auto;
+        ul {
+            padding: 0;
+            li {
+                list-style: none;
                 margin: 0;
+                width: 100%;
+                a {
+                    width: 100%;
+                    margin: 0;
+
+                }
             }
         }
     }
-
     /* Social Media Buttons */
     .nav-social-media {
         text-align: center;
         margin: 0;
         padding: calc($base-spacing/2);
+
         li {
             display: inline;
             a {
